Added diesel and gasoline. Organized some capability functions for machine block entities.