@@ -1,30 +1,22 @@
 package com.sonamorningstar.eternalartifacts.content.block.entity;
 
 import com.google.common.base.Predicates;
-import com.sonamorningstar.eternalartifacts.EternalArtifacts;
-import com.sonamorningstar.eternalartifacts.caches.RecipeCache;
+import com.mojang.datafixers.util.Pair;
 import com.sonamorningstar.eternalartifacts.capabilities.ModEnergyStorage;
 import com.sonamorningstar.eternalartifacts.capabilities.ModFluidStorage;
 import com.sonamorningstar.eternalartifacts.capabilities.ModItemStorage;
 import com.sonamorningstar.eternalartifacts.capabilities.MultiFluidTank;
 import com.sonamorningstar.eternalartifacts.container.OilRefineryMenu;
 import com.sonamorningstar.eternalartifacts.content.block.entity.base.SidedTransferMachineBlockEntity;
-import com.sonamorningstar.eternalartifacts.content.recipe.OilRefineryRecipe;
-import com.sonamorningstar.eternalartifacts.content.recipe.container.SimpleFluidContainer;
-import com.sonamorningstar.eternalartifacts.core.ModBlockEntities;
-import com.sonamorningstar.eternalartifacts.core.ModRecipes;
-import com.sonamorningstar.eternalartifacts.core.ModTags;
+import com.sonamorningstar.eternalartifacts.core.*;
 import com.sonamorningstar.eternalartifacts.util.ItemHelper;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.ItemUtils;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import net.neoforged.neoforge.fluids.FluidStack;
 import net.neoforged.neoforge.fluids.capability.IFluidHandler;
-import net.neoforged.neoforge.items.ItemHandlerHelper;
 
 import java.util.Random;
 
@@ -34,62 +26,29 @@ public class OilRefineryBlockEntity extends SidedTransferMachineBlockEntity<OilR
         setMaxProgress(20);
     }
 
-    RecipeCache<OilRefineryRecipe, SimpleFluidContainer> recipeCache = new RecipeCache<>();
-
-    public MultiFluidTank tanks = new MultiFluidTank(
-            new ModFluidStorage(16000, fs -> fs.is(ModTags.Fluids.CRUDE_OIL)) {
-                @Override
-                public FluidStack drain(int maxDrain, FluidAction action) {
-                    return FluidStack.EMPTY;
-                }
-                @Override
-                protected void onContentsChanged() {
-                    OilRefineryBlockEntity.this.sendUpdate();
-                    recipeCache.findRecipe(ModRecipes.OIL_REFINERY_TYPE.get(), new SimpleFluidContainer(tanks.getFluidInTank(0)), level);
-                }
-            },
-            createBasicTank(16000, Predicates.alwaysFalse(), true),
-            createBasicTank(16000, Predicates.alwaysFalse(), true)
+    public MultiFluidTank<ModFluidStorage> tanks = new MultiFluidTank<>(
+            createBasicTank(16000, fs -> fs.is(ModTags.Fluids.CRUDE_OIL), false, true),
+            createBasicTank(16000, Predicates.alwaysFalse(), true, false),
+            createBasicTank(16000, Predicates.alwaysFalse(), true, false)
     );
 
-    public ModEnergyStorage energy = new ModEnergyStorage(50000, 5000) {
-        @Override
-        public void onEnergyChanged() {
-            OilRefineryBlockEntity.this.sendUpdate();
-        }
-    };
-
-    public ModItemStorage inventory = new ModItemStorage(3) {
-        @Override
-        protected void onContentsChanged(int slot) {
-            OilRefineryBlockEntity.this.sendUpdate();
-        }
-
-        @Override
-        public boolean isItemValid(int slot, ItemStack stack) {
-            return false;
-        }
-
-    };
+    public ModEnergyStorage energy = createBasicEnergy(50000, 5000);
+    public ModItemStorage inventory = createBasicInventory(3, false);
 
     @Override
-    public void onLoad() {
-        super.onLoad();
-        recipeCache.findRecipe(ModRecipes.OIL_REFINERY_TYPE.get(), new SimpleFluidContainer(tanks.getFluidInTank(0)), level);
+    public void load(CompoundTag tag) {
+        super.load(tag);
+        tanks.readFromNBT(tag);
+        energy.deserializeNBT(tag.get("Energy"));
+        inventory.deserializeNBT(tag.getCompound("Inventory"));
     }
 
     @Override
-    public void load(CompoundTag pTag) {
-        super.load(pTag);
-        energy.deserializeNBT(pTag.get("Energy"));
-        tanks.readFromNBT(pTag);
-    }
-
-    @Override
-    protected void saveAdditional(CompoundTag pTag) {
-        super.saveAdditional(pTag);
-        pTag.put("Energy", energy.serializeNBT());
-        tanks.writeToNBT(pTag);
+    protected void saveAdditional(CompoundTag tag) {
+        super.saveAdditional(tag);
+        tanks.writeToNBT(tag);
+        tag.put("Energy", energy.serializeNBT());
+        tag.put("Inventory", inventory.serializeNBT());
     }
 
     @Override
@@ -98,32 +57,28 @@ public class OilRefineryBlockEntity extends SidedTransferMachineBlockEntity<OilR
         performAutoOutputFluids(lvl, pos, tanks);
         performAutoOutput(lvl, pos, inventory, 0, 1, 2);
 
-        if (recipeCache.getRecipe() != null) {
-            //NonNullList<ItemStack> outputItems = recipeCache.getRecipe().getItemOutputs();
-            //NonNullList<Float> chances = recipeCache.getRecipe().getChances();
-            progress(()-> {
-                int inserted = ((ModFluidStorage) tanks.get(1)).fillForced(recipeCache.getRecipe().getOutput(), IFluidHandler.FluidAction.SIMULATE);
-                int insertedSecondary = ((ModFluidStorage) tanks.get(2)).fillForced(recipeCache.getRecipe().getSecondaryOutput(), IFluidHandler.FluidAction.SIMULATE);
-                return inserted <= 0 || insertedSecondary <= 0;
-            }, ()-> {
-                ((ModFluidStorage) tanks.get(1)).fillForced(recipeCache.getRecipe().getOutput(), IFluidHandler.FluidAction.EXECUTE);
-                ((ModFluidStorage) tanks.get(2)).fillForced(recipeCache.getRecipe().getSecondaryOutput(), IFluidHandler.FluidAction.EXECUTE);
+        if (tanks.getFluidInTank(0).getAmount() < 50) return;
 
-                //TODO: Item outputs.
-
-                /*try {
-                    Random random = new Random();
-                    for (int i = 0; i < outputItems.size(); i++) {
-                        if (random.nextFloat() <= chances.get(i)) {
-                            ItemHandlerHelper.insertItemStacked(inventory, outputItems.get(i).copy(), false);
-                        }
-                    }
-                }catch (IndexOutOfBoundsException e) {
-                    EternalArtifacts.LOGGER.error("Chances list and item output list for {} should be same size. Error in recipe {}", OilRefineryRecipe.class, recipeCache.getRecipe());
-                }*/
-
-                ((ModFluidStorage) tanks.get(0)).drainForced(50, IFluidHandler.FluidAction.EXECUTE);
-            }, energy);
-        }
+        FluidStack diesel = ModFluids.DIESEL.getFluidStack(20);
+        FluidStack gasoline = ModFluids.GASOLINE.getFluidStack(25);
+        Pair<ItemStack, Float> tar = Pair.of(ModItems.TAR_BALL.toStack(), 0.15F);
+        Pair<ItemStack, Float> bitument = Pair.of(ModItems.BITUMEN.toStack(), 0.1F);
+        progress(()-> {
+            //TODO: Might need a helper method.
+            FluidStack oilExtracted = tanks.get(0).drainForced(50, IFluidHandler.FluidAction.SIMULATE);
+            int dieselInserted = tanks.get(1).fillForced(diesel, IFluidHandler.FluidAction.SIMULATE);
+            int gasolineInserted = tanks.get(2).fillForced(gasoline, IFluidHandler.FluidAction.SIMULATE);
+            ItemStack first = ItemHelper.insertItemStackedForced(inventory, tar.getFirst(), true);
+            ItemStack second = ItemHelper.insertItemStackedForced(inventory, bitument.getFirst(), true);
+            return oilExtracted.getAmount() < 50 || dieselInserted < diesel.getAmount() ||
+                    gasolineInserted < gasoline.getAmount() || !first.isEmpty() || !second.isEmpty();
+        }, ()-> {
+            tanks.get(0).drainForced(50, IFluidHandler.FluidAction.EXECUTE);
+            tanks.get(1).fillForced(diesel, IFluidHandler.FluidAction.EXECUTE);
+            tanks.get(2).fillForced(gasoline, IFluidHandler.FluidAction.EXECUTE);
+            Random random = new Random();
+            if (random.nextFloat() <= tar.getSecond()) ItemHelper.insertItemStackedForced(inventory, tar.getFirst(), false);
+            if (random.nextFloat() <= bitument.getSecond()) ItemHelper.insertItemStackedForced(inventory, bitument.getFirst(), false);
+        }, energy);
     }
 }
